Added demo.caloom.com support to settings/configs

--- a/Tools/WebTemplateManager/app.config
+++ b/Tools/WebTemplateManager/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <WebTemplateManager.Properties.Settings>
             <setting name="AllowedContainerNames" serializeAs="String">
-                <value>schools-caloom-com,business-caloom-com</value>
+                <value>schools-caloom-com,business-caloom-com,demo-caloom-com</value>
             </setting>
         </WebTemplateManager.Properties.Settings>
     </applicationSettings>
