--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -147,6 +147,7 @@
     </Content>
     <Content Include="InstanceSettings_CaloomSchools.config" />
     <None Include="Properties\PublishProfiles\business.caloom.com.pubxml" />
+    <None Include="Properties\PublishProfiles\demo.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demooip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demopublicoip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\demowww.aaltoglobalimpact.org.pubxml" />
