Added stub for RESTRequestForwardingHandler (to proxy Azure REST requests with authorization/custom keys)

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -109,6 +109,7 @@
       <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified"/>
       <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified"/>
       <add name="WebSocketHandler" path="/websocket/*" verb="*" type="WebInterface.WebSocketHandler" resourceType="Unspecified"/>
+      <add name="RESTRequestForwardingHandler" path="/REST/*" verb="*" type="WebInterface.RESTRequestForwardingHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
   <system.net>
