Added support for object-object chain field access through ___ notation

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -4,22 +4,22 @@
   <add key="DeveloperBlobContainerName" value="demooip-aaltoglobalimpact-org" />
   <add key="DeveloperAuthPrefix" value="dev" />
   <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
-  <add key="EmailFromAddress" value="no-reply-demo@caloom.com"/>
-  <add key="EmailValidationURLWithoutID" value="https://demo.caloom.com/emailvalidation/"/>
+  <add key="EmailFromAddress" value="no-reply-business@caloom.com"/>
+  <add key="EmailValidationURLWithoutID" value="https://business.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
-  <add key="WorkerActiveContainerName" value="demo-caloom-com" />
+  <add key="WorkerActiveContainerName" value="business-caloom-com" />
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
 {3}"/>
-  <add key="EmailValidationSubjectFormat" value="Welcome to Caloom for Demo/Testing!"/>
-  <add key="EmailValidationMessageFormat" value="Welcome to Caloom for Demo/Testing!
+  <add key="EmailValidationSubjectFormat" value="Welcome to Caloom for Business!"/>
+  <add key="EmailValidationMessageFormat" value="Welcome to Caloom for Business!
 
-Your email address '{0}' has been registered on the Caloom for Demo/Testing!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
+Your email address '{0}' has been registered on the Caloom for Business. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
 
 Use the following link to complete your registration (the link is valid for 30 minutes after which you need to resend the validation):
 {1}
@@ -30,7 +30,7 @@ Wishing you all the best from Caloom team!"/>
 Click the following link to confirm this action:
 {3}"/>
   <add key="EmailGroupJoinSubjectFormat" value="Invitation to join collaboration group: {0}"/>
-  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Caloom for Demo/Testing! to collaborate in the group: {0}. 
+  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Caloom for Business to collaborate in the group: {0}. 
 
 Use the following link to accept the invitation and join the group:
 {1}
