--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -84,6 +84,7 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="Operation\UpdateGroupInformationChangeToMembersImplementation.cs" />
     <Compile Include="Operation\SetCategoryHierarchyAndOrderInNodeSummaryImplementation.cs" />
     <Compile Include="TheBall.CORE\SetOwnerWebRedirectImplementation.cs" />
     <Compile Include="TheBall.CORE\CreateGroupWithTemplatesImplementation.cs" />
