--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -89,6 +89,9 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     -->
+    <modules>
+      <add name="RESTForwarderModule" type="WebInterface.RESTForwarderModule"/>
+     </modules>
     <defaultDocument enabled="true">
       <files>
         <clear/>
