Found / fixed (commented for now) security settings to stop blocking file extensions

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -89,9 +89,22 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     -->
+    <!-- NOTE! uncommenting below is required to allow REST forwarding of all files-->
+    <!--
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <clear/>
+        </hiddenSegments>
+      <fileExtensions allowUnlisted="true">
+        <clear/>
+      </fileExtensions>
+      </requestFiltering>
+    </security>
+    -->
     <modules>
       <add name="RESTForwarderModule" type="WebInterface.RESTForwarderModule"/>
-     </modules>
+    </modules>
     <defaultDocument enabled="true">
       <files>
         <clear/>
