Added device authentication client models and test.caloom.com deployment

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -102,9 +102,12 @@
       </requestFiltering>
     </security>
     -->
+    <!-- Disabled REST forward module for now -->
+    <!--
     <modules>
       <add name="RESTForwarderModule" type="WebInterface.RESTForwarderModule"/>
     </modules>
+    -->
     <defaultDocument enabled="true">
       <files>
         <clear/>
@@ -125,7 +128,10 @@
       <add name="AuthorizedBlobStorageHandlerAuth" path="/auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified"/>
       <add name="EmailValidationHandler" path="/emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified"/>
       <add name="WebSocketHandler" path="/websocket/*" verb="*" type="WebInterface.WebSocketHandler" resourceType="Unspecified"/>
+      <!-- REST handler is replaced with REST module -->
+      <!--
       <add name="RESTRequestForwardingHandler" path="/REST/*" verb="*" type="WebInterface.RESTRequestForwardingHandler" resourceType="Unspecified" />
+      -->
     </handlers>
   </system.webServer>
   <system.net>
