--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -150,7 +150,9 @@
     <Content Include="InstanceSettings_CaloomSchools.config" />
     <Content Include="InstanceSettings_CaloomBusiness.config" />
     <Content Include="InstanceSettings_CaloomDemo.config" />
-    <Content Include="InstanceSettings_CaloomTest.config" />
+    <Content Include="InstanceSettings_CaloomTest.config">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="Properties\PublishProfiles\business.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demo.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demooip.aaltoglobalimpact.org.pubxml" />
