Fixed websockethandler informationcontext, basic functionality for adding group as device on other group is working

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -12,6 +12,7 @@
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
   <add key="WorkerActiveContainerName" value="test-caloom-com" />
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
+  <add key="EmailDeviceJoinSubjectFormat" value="Approve device connection to owner: {0}"/>
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
@@ -25,6 +26,7 @@ Use the following link to complete your registration (the link is valid for 30 m
 {1}
 
 Wishing you all the best from Caloom team!"/>
+  <add key="EmailInputJoinSubjectFormat" value="Approve input joining to owner: {0}"/>
   <add key="EmailInputJoinMessageFormat" value="Your confirmation is required to allow the following information source '{0}' to be fetched within {1} ID {2}. 
 
 Click the following link to confirm this action:
