--- a/Apps/CaloomWorkerRole/CaloomWorkerRole.csproj
+++ b/Apps/CaloomWorkerRole/CaloomWorkerRole.csproj
@@ -11,8 +11,9 @@
     <RootNamespace>CaloomWorkerRole</RootNamespace>
     <AssemblyName>CaloomWorkerRole</AssemblyName>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <RoleType>Worker</RoleType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AWSSDK, Version=1.4.15.1, Culture=neutral, PublicKeyToken=cd2d24cd2bace800, processorArchitecture=MSIL">
@@ -63,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AzureSupport\AzureSupport.csproj">
-      <Project>{33F04EB2-55DE-4539-8E67-152A6057F100}</Project>
+      <Project>{33f04eb2-55de-4539-8e67-152a6057f100}</Project>
       <Name>AzureSupport</Name>
     </ProjectReference>
   </ItemGroup>
