Added information output with email confirmation (mostly, TODO validation handler and verify the sending)

--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -31,6 +31,11 @@ Wishing you all the best from Caloom team!"/>
 
 Click the following link to confirm this action:
 {3}"/>
+  <add key="EmailOutputJoinSubjectFormat" value="Approve information output from owner: {0}"/>
+  <add key="EmailOutputJoinMessageFormat" value="Your confirmation is required to allow the following information output '{0}' to be pushed within {1} ID {2}. 
+
+Click the following link to confirm this action:
+{3}"/>
   <add key="EmailGroupJoinSubjectFormat" value="Invitation to join collaboration group: {0}"/>
   <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Caloom for DEVELOPMENT TESTING! to collaborate in the group: {0}. 
 
