--- a/Tools/TheBallTool/app.config
+++ b/Tools/TheBallTool/app.config
@@ -9,7 +9,7 @@
     <applicationSettings>
         <TheBallTool.Properties.Settings>
             <setting name="CurrentActiveContainerName" serializeAs="String">
-                <value>business-caloom-com</value>
+                <value>test-caloom-com</value>
             </setting>
         </TheBallTool.Properties.Settings>
     </applicationSettings>
