--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -87,6 +87,12 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="TheBall.CORE\InformationOutputCollection.cs" />
+    <Compile Include="TheBall.CORE\PushToInformationOutputImplementation.cs" />
+    <Compile Include="TheBall.CORE\CreateAndSendEmailValidationForInformationOutputConfirmationImplementation.cs" />
+    <Compile Include="TheBall.CORE\DeleteInformationOutputImplementation.cs" />
+    <Compile Include="TheBall.CORE\CreateInformationOutputImplementation.cs" />
+    <Compile Include="TheBall.CORE\SetInformationOutputValidationAndActiveStatusImplementation.cs" />
     <Compile Include="TheBall.CORE\DeleteAuthenticatedAsActiveDeviceImplementation.cs" />
     <Compile Include="TheBall.CORE\PerformNegotiationAndValidateAuthenticationAsActiveDeviceImplementation.cs" />
     <Compile Include="TheBall.CORE\CreateAuthenticatedAsActiveDeviceImplementation.cs" />
