--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -40,25 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomCore.xml">
+    <Content Include="..\..\InformationAndProcessModels\CaloomCore.xml">
       <Link>TheBallCore\CaloomCore.xml</Link>
-      <SubType>Designer</SubType>
     </Content>
-    <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomHousing.xml">
+    <Content Include="..\..\InformationAndProcessModels\CaloomHousing.xml">
       <Link>TheBallCore\CaloomHousing.xml</Link>
-      <SubType>Designer</SubType>
     </Content>
-    <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\CaloomSchools.xml">
+    <Content Include="..\..\InformationAndProcessModels\CaloomSchools.xml">
       <Link>TheBallCore\CaloomSchools.xml</Link>
-      <SubType>Designer</SubType>
     </Content>
-    <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\OIPBallInstance.xml">
+    <Content Include="..\..\InformationAndProcessModels\OIPBallInstance.xml">
       <Link>TheBallCore\OIPBallInstance.xml</Link>
-      <SubType>Designer</SubType>
     </Content>
-    <Content Include="..\..\Apps\WorkerTemplate\CaloomUI\caloomxml\TheBallCore.xml">
+    <Content Include="..\..\InformationAndProcessModels\TheBallCore.xml">
       <Link>TheBallCore\TheBallCore.xml</Link>
-      <SubType>Designer</SubType>
     </Content>
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
@@ -93,7 +88,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>copy "$(SolutionDir)Apps\WorkerTemplate\CaloomUI\caloomxml\*.xml" "$(SolutionDir)Abstractions\AbstractionContent\TheBallCore\In\Content_v1_0\"</PreBuildEvent>
+    <PreBuildEvent>copy "$(SolutionDir)InformationAndProcessModels\*.xml" "$(SolutionDir)Abstractions\AbstractionContent\TheBallCore\In\Content_v1_0\"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
