Added OIP testing and beta sites

--- a/Apps/WebInterface/InstanceSettings_OIPBeta.config
+++ b/Apps/WebInterface/InstanceSettings_OIPBeta.config
@@ -4,23 +4,23 @@
   <add key="DeveloperBlobContainerName" value="demooip-aaltoglobalimpact-org" />
   <add key="DeveloperAuthPrefix" value="dev" />
   <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
-  <add key="EmailFromAddress" value="no-reply-testoip@aaltoglobalimpact.org"/>
-  <add key="EmailValidationURLWithoutID" value="https://testoip.aaltoglobalimpact.com/emailvalidation/"/>
+  <add key="EmailFromAddress" value="no-reply-betaoip@aaltoglobalimpact.org"/>
+  <add key="EmailValidationURLWithoutID" value="https://betaoip.aaltoglobalimpact.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
   <add key="GroupDefaultRedirect" value="categoriesandcontent/html/group.html"/>
-  <add key="WorkerActiveContainerName" value="testoip-aaltoglobalimpact-org" />
+  <add key="WorkerActiveContainerName" value="betaoip-aaltoglobalimpact-org" />
   <add key="RedirectFromFolderFileName" value="RedirectFromFolder.red"/>
   <add key="EmailDeviceJoinSubjectFormat" value="Approve device connection to owner: {0}"/>
   <add key="EmailDeviceJoinMessageFormat" value="Your confirmation is required to trust the following device '{0}' to be joined to trust within {1} ID {2}. 
 
 Click the following link to confirm this action:
 {3}"/>
-  <add key="EmailValidationSubjectFormat" value="Welcome to OIP for DEVELOPMENT TESTING!"/>
-  <add key="EmailValidationMessageFormat" value="Welcome to OIP for DEVELOPMENT TESTING!
+  <add key="EmailValidationSubjectFormat" value="Welcome to Beta of Open Innovation Platform!"/>
+  <add key="EmailValidationMessageFormat" value="Welcome to Beta of Open Innovation Platform!
 
-Your email address '{0}' has been registered on the Open Innovation Platform for DEVELOPMENT TESTING!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
+Your email address '{0}' has been registered on the Open Innovation Platform Beta!. Before you start your collaboration we simply need to confirm that you did register your email. Please follow the link below during which you might be redirected to perform the authentication.
 
 Use the following link to complete your registration (the link is valid for 30 minutes after which you need to resend the validation):
 {1}
@@ -37,7 +37,7 @@ Click the following link to confirm this action:
 Click the following link to confirm this action:
 {3}"/>
   <add key="EmailGroupJoinSubjectFormat" value="Invitation to join collaboration group: {0}"/>
-  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Open Innovation Platform for DEVELOPMENT TESTING! to collaborate in the group: {0}. 
+  <add key="EmailGroupJoinMessageFormat" value="You have been invited to join in the Open Innovation Platform Beta! to collaborate in the group: {0}. 
 
 Use the following link to accept the invitation and join the group:
 {1}
