--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -153,6 +153,8 @@
     <Content Include="InstanceSettings_CaloomTest.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="InstanceSettings_OIPTest.config" />
+    <None Include="Properties\PublishProfiles\betaoip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\business.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demo.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demooip.aaltoglobalimpact.org.pubxml" />
@@ -163,6 +165,7 @@
     <None Include="Properties\PublishProfiles\globalimpact.aalto.fi.pubxml" />
     <None Include="Properties\PublishProfiles\schools.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\test.caloom.com.pubxml" />
+    <None Include="Properties\PublishProfiles\testoip.aaltoglobalimpact.org.pubxml" />
     <None Include="Properties\PublishProfiles\theball - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\theball - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\Web Role OIPSSL.pubxml" />
