Replaced AzureWebFarm with custom build to support SNI

--- a/Apps/WebInterface/InstanceSettings_OIPBeta.config
+++ b/Apps/WebInterface/InstanceSettings_OIPBeta.config
@@ -5,7 +5,7 @@
   <add key="DeveloperAuthPrefix" value="dev" />
   <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
   <add key="EmailFromAddress" value="no-reply-betaoip@aaltoglobalimpact.org"/>
-  <add key="EmailValidationURLWithoutID" value="https://betaoip.aaltoglobalimpact.com/emailvalidation/"/>
+  <add key="EmailValidationURLWithoutID" value="https://betaoip.aaltoglobalimpact.org/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
   <add key="AccountDefaultRedirect" value="webui/html/account.html"/>
   <add key="DefaultGroupTemplateList" value="groupmanagement,categoriesandcontent"/>
