--- a/Apps/TheBallWebFarm/TheBallWebFarm.csproj
+++ b/Apps/TheBallWebFarm/TheBallWebFarm.csproj
@@ -50,8 +50,9 @@
     <Reference Include="AzureToolkit">
       <HintPath>..\packages\AzureToolkit.2.4.10\lib\net40\AzureToolkit.dll</HintPath>
     </Reference>
-    <Reference Include="AzureWebFarm">
-      <HintPath>..\packages\AzureWebFarm.0.9.2.27\lib\NET40\AzureWebFarm.dll</HintPath>
+    <Reference Include="AzureWebFarm, Version=0.9.2.27, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Ext\AzureWebFarm.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
