Added InformationContextManager as module, added performance benchmarks (commented save on request storage item for now)

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -108,6 +108,9 @@
       <add name="RESTForwarderModule" type="WebInterface.RESTForwarderModule"/>
     </modules>
     -->
+    <modules>
+      <add name="InformationContextManagerModule" type="WebInterface.InformationContextManagerModule"/>
+    </modules>
     <defaultDocument enabled="true">
       <files>
         <clear/>
