--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -87,6 +87,7 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="ExecutionStopwatch.cs" />
     <Compile Include="TheBall.CORE\InformationOutputCollection.cs" />
     <Compile Include="TheBall.CORE\PushToInformationOutputImplementation.cs" />
     <Compile Include="TheBall.CORE\CreateAndSendEmailValidationForInformationOutputConfirmationImplementation.cs" />
