Added resource usage tracking object storing for web requests - feels like it's slowing down GET requests for now...

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -53,7 +53,7 @@
       </providers>
     </sessionState>
     -->
-    <httpRuntime targetFramework="4.5" maxRequestLength="512000"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="512000" />
     <pages controlRenderingCompatibilityVersion="4.0" enableViewState="false" enableViewStateMac="false"/>
   </system.web>
   <location path="grp">
@@ -139,6 +139,11 @@
     </handlers>
   </system.webServer>
   <system.net>
+    <!--
+    <connectionManagement>
+      <add address="*" maxconnection="12"/>
+    </connectionManagement>
+    -->
     <defaultProxy enabled="true"/>
     <settings>
       <!-- This setting causes .NET to check certificate revocation lists (CRL) 
