UsageMonitorItems populated from group's resource usage

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -87,6 +87,7 @@
     <Compile Include="..\..\Abstractions\AbstractionContent\TheBallCore\Out\TheBallCore.designer.cs">
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
+    <Compile Include="TheBall.CORE\UpdateUsageMonitoringItemsImplementation.cs" />
     <Compile Include="TheBall.CORE\ProcessAllResourceUsagesToOwnerCollectionsImplementation.cs" />
     <Compile Include="TheBall.CORE\ProcessBatchOfResourceUsagesToOwnerCollectionsImplementation.cs" />
     <Compile Include="ExecutionStopwatch.cs" />
@@ -228,6 +229,8 @@
     <Compile Include="Partials\TBCollaboratingGroup.cs" />
     <Compile Include="Partials\TBRLoginGroupRoot.cs" />
     <Compile Include="TheBall.CORE\SystemSupport.cs" />
+    <Compile Include="TheBall.CORE\UsageMonitorItem.cs" />
+    <Compile Include="TheBall.CORE\UsageMonitorItemCollection.cs" />
     <Compile Include="WebSupport.cs" />
     <Compile Include="WorkerSupport.cs" />
   </ItemGroup>
