--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -55,6 +55,7 @@
     </Content>
     <Content Include="..\..\InformationAndProcessModels\TheBallCore.xml">
       <Link>TheBallCore\TheBallCore.xml</Link>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
