--- a/Tools/TheBallTool/Properties/Settings.settings
+++ b/Tools/TheBallTool/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="CurrentActiveContainerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">betaoip-aaltoglobalimpact-org</Value>
+      <Value Profile="(Default)">test-caloom-com</Value>
     </Setting>
   </Settings>
 </SettingsFile>
