--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -88,6 +88,8 @@
       <Link>Abstractions\TheBallCore.designer.cs</Link>
     </Compile>
     <Compile Include="Partials\BinaryFile.cs" />
+    <Compile Include="Partials\BinaryFileCollection.cs" />
+    <Compile Include="Partials\ImageCollection.cs" />
     <Compile Include="TheBall.CORE\UpdateUsageMonitoringSummariesImplementation.cs" />
     <Compile Include="TheBall.CORE\UpdateUsageMonitoringItemsImplementation.cs" />
     <Compile Include="TheBall.CORE\ProcessAllResourceUsagesToOwnerCollectionsImplementation.cs" />
