Cleaned up legacy developer storage handler (obsolete), added ph for AdminGroupID setting

--- a/Apps/WebInterface/InstanceSettings_OIPTest.config
+++ b/Apps/WebInterface/InstanceSettings_OIPTest.config
@@ -1,9 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="DeveloperWebRootFolder" value="c:\users\kalle\work\abs\Caloom\Apps\WorkerTemplate\CaloomUI\caloomhtml\UI\docs" />
-  <add key="DeveloperBlobContainerName" value="demooip-aaltoglobalimpact-org" />
-  <add key="DeveloperAuthPrefix" value="dev" />
-  <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
+  <add key="AdminGroupID" value=""/>
   <add key="EmailFromAddress" value="no-reply-testoip@aaltoglobalimpact.org"/>
   <add key="EmailValidationURLWithoutID" value="https://testoip.aaltoglobalimpact.org/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
