--- a/Apps/WebInterface/InstanceSettings_CaloomBusiness.config
+++ b/Apps/WebInterface/InstanceSettings_CaloomBusiness.config
@@ -1,9 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="DeveloperWebRootFolder" value="c:\users\kalle\work\abs\Caloom\Apps\WorkerTemplate\CaloomUI\caloomhtml\UI\docs" />
-  <add key="DeveloperBlobContainerName" value="demooip-aaltoglobalimpact-org" />
-  <add key="DeveloperAuthPrefix" value="dev" />
-  <add key="DeveloperGroupID" value="developer-00000000000000000000000000" />
+  <add key="AdminGroupID" value=""/>
   <add key="EmailFromAddress" value="no-reply-business@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://business.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
