--- a/Apps/WebInterface/InstanceSettings.config
+++ b/Apps/WebInterface/InstanceSettings.config
@@ -1,6 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value=""/>
+  <add key="AdminGroupID" value="5572fe40-3ff3-46c8-9a5b-20a728665bbb"/>
   <add key="EmailFromAddress" value="no-reply-test@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://test.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
