--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -53,6 +53,9 @@
       <Link>TheBallCore\OIPBallInstance.xml</Link>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="..\..\InformationAndProcessModels\TheBallAdmin.xml">
+      <Link>TheBallCore\TheBallAdmin.xml</Link>
+    </Content>
     <Content Include="..\..\InformationAndProcessModels\TheBallCore.xml">
       <Link>TheBallCore\TheBallCore.xml</Link>
       <SubType>Designer</SubType>
