Set admin groups, added all group fix on admin view...

--- a/Apps/WebInterface/InstanceSettings_CaloomBusiness.config
+++ b/Apps/WebInterface/InstanceSettings_CaloomBusiness.config
@@ -1,6 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value=""/>
+  <add key="AdminGroupID" value="dae840ed-fdef-405b-b44b-5620b46c4f0b"/>
   <add key="EmailFromAddress" value="no-reply-business@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://business.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
