--- a/Apps/WebInterface/InstanceSettings_OIPBeta.config
+++ b/Apps/WebInterface/InstanceSettings_OIPBeta.config
@@ -1,6 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value=""/>
+  <add key="AdminGroupID" value="33d1d243-ea64-43eb-aeea-c1faaf63138b"/>
   <add key="EmailFromAddress" value="no-reply-betaoip@aaltoglobalimpact.org"/>
   <add key="EmailValidationURLWithoutID" value="https://betaoip.aaltoglobalimpact.org/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
