--- a/Apps/WebInterface/InstanceSettings_OIPTest.config
+++ b/Apps/WebInterface/InstanceSettings_OIPTest.config
@@ -1,6 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value=""/>
+  <add key="AdminGroupID" value="03e65548-e9ad-4a58-b9b1-0c775dd40d9e"/>
   <add key="EmailFromAddress" value="no-reply-testoip@aaltoglobalimpact.org"/>
   <add key="EmailValidationURLWithoutID" value="https://testoip.aaltoglobalimpact.org/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
