--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -32,6 +32,7 @@
       </system.Web>
   -->
   <system.web>
+    <!-- NOTE, Changing Debug = false also requires request timeout to be introduced for long runnin admin requests... or finally worker refactor ;-) -->
     <compilation debug="true" targetFramework="4.5"/>
     <customErrors mode="Off"/>
     <authentication mode="Forms">
