--- a/Apps/WebInterface/WebInterface.csproj
+++ b/Apps/WebInterface/WebInterface.csproj
@@ -163,21 +163,10 @@
     <None Include="Properties\PublishProfiles\business.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demo.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\demooip.aaltoglobalimpact.org.pubxml" />
-    <None Include="Properties\PublishProfiles\demopublicoip.aaltoglobalimpact.org.pubxml" />
-    <None Include="Properties\PublishProfiles\demowww.aaltoglobalimpact.org.pubxml" />
-    <None Include="Properties\PublishProfiles\demowww.weconomy.protonit.net.pubxml" />
-    <None Include="Properties\PublishProfiles\FilesystemTest.pubxml" />
-    <None Include="Properties\PublishProfiles\globalimpact.aalto.fi.pubxml" />
     <None Include="Properties\PublishProfiles\schools.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\test.caloom.com.pubxml" />
     <None Include="Properties\PublishProfiles\testoip.aaltoglobalimpact.org.pubxml" />
-    <None Include="Properties\PublishProfiles\theball - FTP.pubxml" />
-    <None Include="Properties\PublishProfiles\theball - Web Deploy.pubxml" />
-    <None Include="Properties\PublishProfiles\Web Role OIPSSL.pubxml" />
-    <None Include="Properties\PublishProfiles\oip.msunit.citrus.fi.pubxml" />
-    <None Include="Properties\PublishProfiles\WebFarmTest.pubxml" />
-    <None Include="Properties\PublishProfiles\www.aaltoglobalimpact.org.pubxml" />
-    <None Include="Properties\PublishProfiles\www.globalimpact.aalto.fi.pubxml" />
+    <None Include="Properties\PublishProfiles\Websites.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AzureSupport\AzureSupport.csproj">
