--- a/Apps/WebInterface/InstanceSettings_CaloomDemo.config
+++ b/Apps/WebInterface/InstanceSettings_CaloomDemo.config
@@ -1,6 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value=""/>
+  <add key="AdminGroupID" value="7cd43a8c-bd6a-4b38-87be-395d5561b838"/>
   <add key="EmailFromAddress" value="no-reply-demo@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://demo.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
