--- a/Apps/WebInterface/InstanceSettings_CaloomSchools.config
+++ b/Apps/WebInterface/InstanceSettings_CaloomSchools.config
@@ -1,6 +1,6 @@
 <appSettings>
   <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  <add key="AdminGroupID" value=""/>
+  <add key="AdminGroupID" value="1b5d1c48-b623-4cf5-b8e6-4e2834a037a8"/>
   <add key="EmailFromAddress" value="no-reply-schools@caloom.com"/>
   <add key="EmailValidationURLWithoutID" value="https://schools.caloom.com/emailvalidation/"/>
   <add key="DefaultAccountTemplateList" value="webui"/>
