Added categorizing to images and binary files, and location to images

--- a/Tools/TheBallTool/app.config
+++ b/Tools/TheBallTool/app.config
@@ -9,7 +9,16 @@
     <applicationSettings>
         <TheBallTool.Properties.Settings>
             <setting name="CurrentActiveContainerName" serializeAs="String">
+              <!--
+                <value>testoip-aaltoglobalimpact-org</value>
+                <value>business-caloom-com</value>
+                <value>schools-caloom-com</value>
                 <value>test-caloom-com</value>
+                <value>demo-caloom-com</value>
+                <value>betaoip-aaltoglobalimpact-org</value>
+                <value>demooip-aaltoglobalimpact-org</value>
+              -->
+              <value>betaoip-aaltoglobalimpact-org</value>
             </setting>
         </TheBallTool.Properties.Settings>
     </applicationSettings>
